# poetry-plugin-freeze

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  justfile  pyproject.toml  readme.md
.github/workflows/: ci.yml  release.yml
src/poetry_plugin_freeze/: app.py
src/poetry_plugin_petrify/: app.py
tests/: conftest.py  test_freeze.py  test_petrify.py
tests/fixtures/nested_packages/: pyproject.toml
tests/fixtures/nested_packages/others/app_c/: pyproject.toml
tests/fixtures/nested_packages/others/app_no_deps/: pyproject.toml
tests/fixtures/nested_packages/others/app_with_extras/: README.md  pyproject.toml
tests/fixtures/non_poetry_package/: pyproject.toml
tests/fixtures/whl_info/: METADATA  RECORD
