[tool.poetry]
name = "poetry-plugin-petrify"
version = "1.0.6"
description = "Poetry plugin to freeze a wheel's dependencies per lock file"
license = "Apache-2.0"
authors = ["Kasper Primdal Lauritzen <git@kplauritzen.dk>","Kapil Thangavelu <kapilt@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/KPLauritzen/poetry-plugin-petrify"

packages = [
  { include = "poetry_plugin_freeze", from = "src" }
]

include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
poetry = "^1.8.4"
poetry-core = "^1.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pytest-cov = "^4.0"
pytest-xdist = { version = "^3.1", extras = ["psutil"] }
ruff = "^0.0.254"


[tool.poetry.plugins."poetry.application.plugin"]
freeze-wheel = "poetry_plugin_freeze.app:FreezeApplicationPlugin"

[tool.ruff]
line-length = 100


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
