[tool.poetry]
name = "poetry-plugin-freeze"
version = "1.2.0"
description = "Poetry plugin to freeze a wheel's dependencies per lock file"
license = "Apache-2.0"
authors = ["Kapil Thangavelu <kapilt@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/cloud-custodian/poetry-plugin-freeze"

packages = [
  { include = "poetry_plugin_freeze", from = "src" }
]

include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.9"
poetry = ">=1.3.0"
poetry-core = ">=1.3.0"
poetry-plugin-export = "^1.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pytest-cov = "^4.0"
pytest-xdist = { version = "^3.1", extras = ["psutil"] }
black = "*"
ruff = "^0.8"


[tool.poetry.plugins."poetry.application.plugin"]
freeze-wheel = "poetry_plugin_freeze.app:FreezeApplicationPlugin"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
