[tool.poetry]
name = "app_b"
description = "lorem ipsum"
version = "0.1"
authors = ["SideCars"]
license = "Apache-2.0"
packages = [
    { include = "app_b" }]
classifiers=[
   "License :: OSI Approved :: Apache Software License"]


[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1"
ruff = "^0.0.259"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"

